tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__plot_options__plot_plot_label.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"Plot[Sin[x], {x, 0, 2 Pi}, PlotLabel -> \"Sine Wave\"]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#5E81B5" stroke-width="15" points="419,1250 434,1224 449,1197 465,1171 480,1145 496,1119 511,1093 527,1067 542,1042 558,1016 573,991 589,967 604,942 620,918 635,894 651,870 666,847 682,824 697,802 713,780 728,758 744,737 759,717 774,697 790,678 805,659 821,641 836,623 852,606 867,590 883,574 898,559 914,545 929,531 945,518 960,506 976,494 991,484 1007,474 1022,465 1038,456 1053,449 1069,442 1084,436 1100,431 1107,429 1115,426 1123,425 1130,423 1138,421 1146,420 1150,420 1154,419 1158,419 1161,418 1165,418 1169,418 1171,418 1173,418 1175,417 1177,417 1179,417 1180,417 1181,417 1182,417 1183,417 1184,417 1184,417 1185,417 1185,417 1186,417 1186,417 1186,417 1187,417 1187,417 1187,417 1187,417 1188,417 1188,417 1188,417 1188,417 1189,417 1189,417 1189,417 1189,417 1189,417 1190,417 1190,417 1190,417 1190,417 1191,417 1191,417 1192,417 1192,417 1193,417 1194,417 1195,417 1196,417 1198,417 1200,417 1202,417 1204,418 1208,418 1212,418 1216,418 1219,419 1223,419 1231,420 1239,421 1247,423 1254,425 1270,429 1285,433 1301,439 1316,445 1332,452 1347,460 1363,469 1378,479 1394,489 1409,500 1425,512 1440,524 1455,538 1471,552 1486,566 1502,582 1517,598 1533,614 1548,632 1564,650 1579,668 1595,687 1610,707 1626,727 1641,748 1657,769 1672,791 1688,813 1703,835 1719,858 1734,882 1750,906 1765,930 1781,954 1796,979 1811,1004 1827,1029 1842,1055 1858,1080 1873,1106 1889,1132 1904,1158 1920,1184 1935,1211 1951,1237 1966,1263 1982,1289 1997,1316 2013,1342 2028,1368 2044,1394 2059,1420 2075,1445 2090,1471 2106,1496 2121,1521 2136,1546 2152,1570 2167,1594 2183,1618 2198,1642 2214,1665 2229,1687 2245,1709 2260,1731 2276,1752 2291,1773 2307,1793 2322,1813 2338,1832 2353,1850 2369,1868 2384,1886 2400,1902 2415,1918 2431,1934 2446,1948 2462,1962 2477,1976 2492,1988 2508,2000 2523,2011 2539,2021 2554,2031 2570,2040 2585,2048 2601,2055 2616,2061 2632,2067 2647,2071 2655,2074 2663,2075 2670,2077 2678,2079 2686,2080 2690,2080 2694,2081 2698,2081 2701,2082 2705,2082 2709,2082 2711,2082 2713,2082 2715,2083 2717,2083 2719,2083 2720,2083 2721,2083 2722,2083 2723,2083 2724,2083 2724,2083 2725,2083 2725,2083 2726,2083 2726,2083 2726,2083 2727,2083 2727,2083 2727,2083 2727,2083 2728,2083 2728,2083 2728,2083 2728,2083 2729,2083 2729,2083 2729,2083 2729,2083 2729,2083 2730,2083 2730,2083 2730,2083 2730,2083 2731,2083 2731,2083 2732,2083 2732,2083 2733,2083 2734,2083 2735,2083 2736,2083 2738,2083 2740,2083 2742,2083 2744,2082 2748,2082 2752,2082 2756,2082 2759,2081 2763,2081 2771,2080 2779,2079 2787,2077 2794,2075 2802,2074 2817,2069 2833,2064 2848,2058 2864,2051 2879,2044 2895,2035 2910,2026 2926,2016 2941,2006 2957,1994 2972,1982 2988,1969 3003,1955 3019,1941 3034,1926 3050,1910 3065,1894 3081,1877 3096,1859 3112,1841 3127,1822 3143,1803 3158,1783 3173,1763 3189,1742 3204,1720 3220,1698 3235,1676 3251,1653 3266,1630 3282,1606 3297,1582 3313,1558 3328,1533 3344,1509 3359,1484 3375,1458 3390,1433 3406,1407 3421,1381 3437,1355 3452,1329 3468,1303 3483,1276 3499,1250 "/>
<line x1="419.0" y1="1250.0" x2="3500.0" y2="1250.0" stroke="#666" stroke-width="10"/>
<line x1="615.1" y1="1250.0" x2="615.1" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="811.3" y1="1250.0" x2="811.3" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="1007.4" y1="1250.0" x2="1007.4" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="1203.6" y1="1250.0" x2="1203.6" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="1595.9" y1="1250.0" x2="1595.9" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="1792.0" y1="1250.0" x2="1792.0" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="1988.1" y1="1250.0" x2="1988.1" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="2184.3" y1="1250.0" x2="2184.3" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="2576.6" y1="1250.0" x2="2576.6" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="2772.7" y1="1250.0" x2="2772.7" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="2968.9" y1="1250.0" x2="2968.9" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="3165.0" y1="1250.0" x2="3165.0" y2="1226.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1250.0" x2="419.0" y2="1210.0" stroke="#666" stroke-width="10"/>
<line x1="1399.7" y1="1250.0" x2="1399.7" y2="1210.0" stroke="#666" stroke-width="10"/>
<text x="1399.7" y="1370.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2380.4" y1="1250.0" x2="2380.4" y2="1210.0" stroke="#666" stroke-width="10"/>
<text x="2380.4" y="1370.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="3361.1" y1="1250.0" x2="3361.1" y2="1210.0" stroke="#666" stroke-width="10"/>
<text x="3361.1" y="1370.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6</text>
<line x1="419.0" y1="350.0" x2="419.0" y2="2150.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="2000.0" x2="443.0" y2="2000.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1916.7" x2="443.0" y2="1916.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1833.4" x2="443.0" y2="1833.4" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1750.0" x2="443.0" y2="1750.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1583.3" x2="443.0" y2="1583.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1500.0" x2="443.0" y2="1500.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1416.7" x2="443.0" y2="1416.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1333.3" x2="443.0" y2="1333.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1166.7" x2="443.0" y2="1166.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1083.3" x2="443.0" y2="1083.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1000.0" x2="443.0" y2="1000.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="916.7" x2="443.0" y2="916.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="750.0" x2="443.0" y2="750.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="666.6" x2="443.0" y2="666.6" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="583.3" x2="443.0" y2="583.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="500.0" x2="443.0" y2="500.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="2083.4" x2="459.0" y2="2083.4" stroke="#666" stroke-width="10"/>
<text x="371.8" y="2120.1" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-1.0</text>
<line x1="419.0" y1="1666.7" x2="459.0" y2="1666.7" stroke="#666" stroke-width="10"/>
<text x="371.8" y="1703.4" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-0.5</text>
<line x1="419.0" y1="1250.0" x2="459.0" y2="1250.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="833.3" x2="459.0" y2="833.3" stroke="#666" stroke-width="10"/>
<text x="371.8" y="870.1" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.5</text>
<line x1="419.0" y1="416.6" x2="459.0" y2="416.6" stroke="#666" stroke-width="10"/>
<text x="371.8" y="453.4" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
<text x="1959.5" y="265.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="170" fill="#333">Sine Wave</text>
</svg>
