tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__plot_options__plot_plot_style_single.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"Plot[Sin[x], {x, 0, 2 Pi}, PlotStyle -> Red]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#FF0000" stroke-width="15" points="419,1125 434,1095 449,1065 465,1035 480,1006 496,976 511,946 527,917 542,888 558,859 573,830 589,802 604,774 620,746 635,719 651,692 666,666 682,640 697,614 713,589 728,565 744,541 759,518 774,495 790,473 805,452 821,431 836,411 852,391 867,373 883,355 898,338 914,321 929,306 945,291 960,277 976,264 991,252 1007,241 1022,230 1038,221 1053,212 1069,205 1084,198 1100,192 1107,189 1115,187 1123,185 1130,183 1138,181 1146,180 1150,179 1154,179 1158,178 1161,178 1165,177 1169,177 1171,177 1173,177 1175,177 1177,177 1179,177 1180,177 1181,176 1182,176 1183,176 1184,176 1184,176 1185,176 1185,176 1186,176 1186,176 1186,176 1187,176 1187,176 1187,176 1187,176 1188,176 1188,176 1188,176 1188,176 1189,176 1189,176 1189,176 1189,176 1189,176 1190,176 1190,176 1190,176 1190,176 1191,176 1191,176 1192,176 1192,176 1193,176 1194,176 1195,176 1196,176 1198,177 1200,177 1202,177 1204,177 1208,177 1212,177 1216,178 1219,178 1223,179 1231,180 1239,181 1247,183 1254,185 1270,189 1285,195 1301,201 1316,208 1332,217 1347,226 1363,236 1378,246 1394,258 1409,271 1425,284 1440,299 1455,314 1471,330 1486,346 1502,364 1517,382 1533,401 1548,421 1564,441 1579,462 1595,484 1610,506 1626,529 1641,553 1657,577 1672,602 1688,627 1703,653 1719,679 1734,706 1750,733 1765,760 1781,788 1796,816 1811,845 1827,873 1842,902 1858,932 1873,961 1889,991 1904,1020 1920,1050 1935,1080 1951,1110 1966,1140 1982,1170 1997,1200 2013,1230 2028,1259 2044,1289 2059,1318 2075,1348 2090,1377 2106,1405 2121,1434 2136,1462 2152,1490 2167,1517 2183,1544 2198,1571 2214,1597 2229,1623 2245,1648 2260,1673 2276,1697 2291,1721 2307,1744 2322,1766 2338,1788 2353,1809 2369,1829 2384,1849 2400,1868 2415,1886 2431,1904 2446,1920 2462,1936 2477,1951 2492,1966 2508,1979 2523,1992 2539,2004 2554,2014 2570,2024 2585,2033 2601,2042 2616,2049 2632,2055 2647,2061 2655,2063 2663,2065 2670,2067 2678,2069 2686,2070 2690,2071 2694,2071 2698,2072 2701,2072 2705,2073 2709,2073 2711,2073 2713,2073 2715,2073 2717,2073 2719,2073 2720,2073 2721,2074 2722,2074 2723,2074 2724,2074 2724,2074 2725,2074 2725,2074 2726,2074 2726,2074 2726,2074 2727,2074 2727,2074 2727,2074 2727,2074 2728,2074 2728,2074 2728,2074 2728,2074 2729,2074 2729,2074 2729,2074 2729,2074 2729,2074 2730,2074 2730,2074 2730,2074 2730,2074 2731,2074 2731,2074 2732,2074 2732,2074 2733,2074 2734,2074 2735,2074 2736,2074 2738,2073 2740,2073 2742,2073 2744,2073 2748,2073 2752,2073 2756,2072 2759,2072 2763,2071 2771,2070 2779,2069 2787,2067 2794,2065 2802,2063 2817,2058 2833,2052 2848,2045 2864,2038 2879,2029 2895,2020 2910,2009 2926,1998 2941,1986 2957,1973 2972,1959 2988,1944 3003,1929 3019,1912 3034,1895 3050,1877 3065,1859 3081,1839 3096,1819 3112,1798 3127,1777 3143,1755 3158,1732 3173,1709 3189,1685 3204,1661 3220,1636 3235,1610 3251,1584 3266,1558 3282,1531 3297,1504 3313,1476 3328,1448 3344,1420 3359,1391 3375,1362 3390,1333 3406,1304 3421,1274 3437,1244 3452,1215 3468,1185 3483,1155 3499,1125 "/>
<line x1="419.0" y1="1125.0" x2="3500.0" y2="1125.0" stroke="#666" stroke-width="10"/>
<line x1="615.1" y1="1125.0" x2="615.1" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="811.3" y1="1125.0" x2="811.3" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1007.4" y1="1125.0" x2="1007.4" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1203.6" y1="1125.0" x2="1203.6" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1595.9" y1="1125.0" x2="1595.9" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1792.0" y1="1125.0" x2="1792.0" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1988.1" y1="1125.0" x2="1988.1" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2184.3" y1="1125.0" x2="2184.3" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2576.6" y1="1125.0" x2="2576.6" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2772.7" y1="1125.0" x2="2772.7" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2968.9" y1="1125.0" x2="2968.9" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="3165.0" y1="1125.0" x2="3165.0" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1125.0" x2="419.0" y2="1085.0" stroke="#666" stroke-width="10"/>
<line x1="1399.7" y1="1125.0" x2="1399.7" y2="1085.0" stroke="#666" stroke-width="10"/>
<text x="1399.7" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2380.4" y1="1125.0" x2="2380.4" y2="1085.0" stroke="#666" stroke-width="10"/>
<text x="2380.4" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="3361.1" y1="1125.0" x2="3361.1" y2="1085.0" stroke="#666" stroke-width="10"/>
<text x="3361.1" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6</text>
<line x1="419.0" y1="100.0" x2="419.0" y2="2150.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1979.2" x2="443.0" y2="1979.2" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1884.3" x2="443.0" y2="1884.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1789.4" x2="443.0" y2="1789.4" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1694.5" x2="443.0" y2="1694.5" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1504.6" x2="443.0" y2="1504.6" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1409.7" x2="443.0" y2="1409.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1314.8" x2="443.0" y2="1314.8" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1219.9" x2="443.0" y2="1219.9" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1030.1" x2="443.0" y2="1030.1" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="935.2" x2="443.0" y2="935.2" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="840.3" x2="443.0" y2="840.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="745.4" x2="443.0" y2="745.4" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="555.5" x2="443.0" y2="555.5" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="460.6" x2="443.0" y2="460.6" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="365.7" x2="443.0" y2="365.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="270.8" x2="443.0" y2="270.8" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="2074.1" x2="459.0" y2="2074.1" stroke="#666" stroke-width="10"/>
<text x="371.8" y="2110.9" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-1.0</text>
<line x1="419.0" y1="1599.6" x2="459.0" y2="1599.6" stroke="#666" stroke-width="10"/>
<text x="371.8" y="1636.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-0.5</text>
<line x1="419.0" y1="1125.0" x2="459.0" y2="1125.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="650.4" x2="459.0" y2="650.4" stroke="#666" stroke-width="10"/>
<text x="371.8" y="687.2" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.5</text>
<line x1="419.0" y1="175.9" x2="459.0" y2="175.9" stroke="#666" stroke-width="10"/>
<text x="371.8" y="212.6" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
</svg>
